--- a/style.css
+++ b/style.css
@@ -401,5 +401,13 @@ a {
 		width: 100vw;
 		height: 60vw;
 	}
+
+	#navbar-fill {
+		display: none;
+	}
+
+	#hero-container {
+		margin-top: 0px;
+	}
 }
 
